--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,6 +7,7 @@
     <li><%= dose.description %> <%= dose.ingredient.name %>
       <%= link_to dose_path(dose), method: :delete, data: {:confirm => 'Are you sure?'} do %>
         <i class="fas fa-dumpseter"></i>
+        <% end %>
     </li>
   <% end %>
 </ul>
