--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -14,4 +14,4 @@
 
 <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %>
 
-<%= link_to "Back to Index", cocktails_path%>
+<%= link_to "Back to Index", root_path%>
