--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 </ul>
 
+<%= cl_image_tag @cocktail.photo.key, crop: :thumb %>
+
 <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %>
 
 <%= link_to "Back to Index", root_path%>
